stop overflowing fancy select on embed

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -328,6 +328,11 @@ img {
     width: 100%;
   }
 
+  // Otherwise this overflows the iframe on landing pages
+  .short-fancy-select .selectize-dropdown-content {
+    max-height: 120px;
+  }
+
   label {
     line-height: 1.2em;
   }
